--- a/backend-deal-app/package.json
+++ b/backend-deal-app/package.json
@@ -4,7 +4,7 @@
   "description": "Manage backend data of the deals of users",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"node build/index.js\""
+    "start": "tsc && concurrently \"tsc -w\" \"nodemon build/index.js\""
   },
   "author": "Allan DEBEVE",
   "license": "ISC",
@@ -15,7 +15,8 @@
   "dependencies": {
     "concurrently": "^7.0.0",
     "fastify": "^3.27.2",
-    "mongodb": "^4.4.0"
+    "mongodb": "^4.4.0",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
