--- a/backend-deal-app/package.json
+++ b/backend-deal-app/package.json
@@ -13,7 +13,9 @@
   },
   "homepage": "https://github.com/Gfaim/deal-app#readme",
   "dependencies": {
+    "@sinclair/typebox": "^0.23.4",
     "concurrently": "^7.0.0",
+    "dotenv": "^16.0.0",
     "fastify": "^3.27.2",
     "mongodb": "^4.4.0",
     "nodemon": "^2.0.15"
